* Stashing some stuff.

--- a/example/optsched-cfg/sched.ini
+++ b/example/optsched-cfg/sched.ini
@@ -86,6 +86,9 @@ ACO_ANT_PER_ITERATION 10
 
 ACO_TRACE NO
 
+#TODO: Add a flag to enable ACO here... #TODO: Do the same thing for the heuristic. #TODO: Remove the current flag that specifies either ACO or the heuristic. (I think it doesn't need to be removed...only remove the ACO option. Check it out: HEUR_SCHED_TYPE)
+#ACO_ENABLED YES
+
 # The importance of the heuristic in ACO. ACO uses (1/heuristic)^importance, so
 # importance of 0 means don't use the heuristic.
 ACO_HEURISTIC_IMPORTANCE 1
