Began implementing ACO_ENABLED flag in sched.ini  * More flags stuff...a lot of stuff is working, but there's a few finicky things.

--- a/example/optsched-cfg/sched.ini
+++ b/example/optsched-cfg/sched.ini
@@ -4,6 +4,19 @@
 # HOT_ONLY: Only use scheduler with hot functions.
 USE_OPT_SCHED YES
 
+# These 3 flags control which schedulers will be used.
+# Each one can be individually toggled.
+# VALUES:
+# YES
+# NO
+# HEUR_ENABLED is the Heuristic scheduler.
+HEUR_ENABLED YES #TODO: Implement this flag.
+#TODO: CHIPPIE: Add a flag to enable ACO here... #TODO: CHIPPIE: Do the same thing for the heuristic. #TODO: CHIPPIE: Remove the current flag that specifies either ACO or the heuristic. (I think it doesn't need to be removed...only remove the ACO option. Check it out: HEUR_SCHED_TYPE)
+# ACO_ENABLED is the Ant Colony Optimization scheduler.
+ACO_ENABLED YES
+# BB_ENABLED is the Branch and Bound scheduler.
+BB_ENABLED YES #TODO: Implement this flag.
+
 # Print spill counts
 # Same options as use optimal scheduling.
 PRINT_SPILL_COUNTS YES
