--- a/example/optsched-cfg/sched.ini
+++ b/example/optsched-cfg/sched.ini
@@ -4,6 +4,16 @@
 # HOT_ONLY: Only use scheduler with hot functions.
 USE_OPT_SCHED YES
 
+# These 3 flags control which schedulers will be used.
+# Each one can be individually toggled.
+# VALUES:
+# YES
+# NO
+HEUR_ENABLED YES #TODO: Implement this flag.
+#TODO: CHIPPIE: Add a flag to enable ACO here... #TODO: CHIPPIE: Do the same thing for the heuristic. #TODO: CHIPPIE: Remove the current flag that specifies either ACO or the heuristic. (I think it doesn't need to be removed...only remove the ACO option. Check it out: HEUR_SCHED_TYPE)
+ACO_ENABLED YES
+BB_ENABLED YES #TODO: Implement this flag.
+
 # Print spill counts
 # Same options as use optimal scheduling.
 PRINT_SPILL_COUNTS YES
@@ -85,9 +95,6 @@ ACO_DECAY_FACTOR 0.1
 ACO_ANT_PER_ITERATION 10
 
 ACO_TRACE NO
-
-#TODO: CHIPPIE: Add a flag to enable ACO here... #TODO: CHIPPIE: Do the same thing for the heuristic. #TODO: CHIPPIE: Remove the current flag that specifies either ACO or the heuristic. (I think it doesn't need to be removed...only remove the ACO option. Check it out: HEUR_SCHED_TYPE)
-ACO_ENABLED YES
 
 # The importance of the heuristic in ACO. ACO uses (1/heuristic)^importance, so
 # importance of 0 means don't use the heuristic.
