--- a/example/optsched-cfg/sched.ini
+++ b/example/optsched-cfg/sched.ini
@@ -9,9 +9,12 @@ USE_OPT_SCHED YES
 # VALUES:
 # YES
 # NO
+# HEUR_ENABLED is the Heuristic scheduler.
 HEUR_ENABLED YES #TODO: Implement this flag.
 #TODO: CHIPPIE: Add a flag to enable ACO here... #TODO: CHIPPIE: Do the same thing for the heuristic. #TODO: CHIPPIE: Remove the current flag that specifies either ACO or the heuristic. (I think it doesn't need to be removed...only remove the ACO option. Check it out: HEUR_SCHED_TYPE)
+# ACO_ENABLED is the Ant Colony Optimization scheduler.
 ACO_ENABLED YES
+# BB_ENABLED is the Branch and Bound scheduler.
 BB_ENABLED YES #TODO: Implement this flag.
 
 # Print spill counts
